--- a/docs/block3_session_1.Rmd
+++ b/docs/block3_session_1.Rmd
@@ -367,6 +367,38 @@ class:center,middle
 
 ---
 
+
+class:center,middle
+
+## What is Docker good for ? 
+
+
+---
+
+
+class:center,middle
+
+## Test Stack, Conserve Setups 
+
+e.g., [PostgreSQL version on docker hub](https://hub.docker.com/_/postgres) 
+
+---
+
+
+class:center,middle
+
+## Run Applications w/o Side Effects
+
+
+---
+
+class:center,middle
+
+## Develop @home, Run in the Cloud
+
+
+---
+
 class:center,middle
 
 
@@ -379,17 +411,22 @@ class:center,middle
 ---
 
 
+## Docker in one Slide
 
-## Docker Basics
+
+- Single purpose, application focused virtualization.
+
+- **Images**: **blueprints** for **containers**.
+
+- **Registries**: store images.
+
+- Docker files are text based configs from which images are created.
+
+- Images can be stacked, so we can build on existing images
+
+- Docker containers run on a Docker Host / Docker Desktop or in Docker Cluster like Docker Swarm or Kubernetes. 
 
 
-**Dockerfiles** are **recipes** for **docker images**. 
-
-**Docker images** are **blueprints** for **containers**. 
-
-Docker images can be **stored locally**, **built from scratch** or be **pulled** from a **Docker Registry** such as Docker Hub. 
-
-Docker containers run on a Docker Host / Docker Desktop or in Docker Cluster like Docker Swarm or Kubernetes. 
 
 <div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
 
