--- a/slides-2022/block_1_session_1.qmd
+++ b/slides-2022/block_1_session_1.qmd
@@ -6,48 +6,102 @@ author: "Matt Bannert (@whatsgoodio)"
 format: revealjs
 ---
 
-## Hi, I'm Matt. 
+## Hi, I'm Matt. {.center}
 
 ![](img/matt.jpeg)
 
-## James Bond Start
+## James Bond Start {.center}
 
-<a href="https://giphy.com/gifs/starz-james-bond-1hCnI6vRRBYPiaosR4"><img src="img/bond.gif"></a>
-
-## Markdown / Quarto
+![](img/bond.gif)
 
 
-## git version control
+## Markdown / Quarto {.center}
 
 
-## Swissdata 1.0 
+## git version control {.center}
 
 
-## [Background Survey](https://graphs.kof.ethz.ch/h4sci-survey/)
+## Swissdata 1.0 {.center}
 
 
-## Overall Course Outline
+## [Background Survey](https://graphs.kof.ethz.ch/h4sci-survey/) {.center}
+
+
+# Overall Course Outline
 
 
 ## Talk, Talk, Talk
 
+![](img/talk.gif)
 
-## Schedule
+## Coaching
 
-30.09.	10-13	The Big Picture
-01.10.	10-14	Git & Workflows
+![](img/klopp.gif)
 
-21.10.	10-13	R Programming Crash Course
-22.10.	10-14	Programming with Data
-
-18.11.	10-13	Infrastructure
-19.11.	10-14	Infrastructure
-
-02.12.	10-13	Semester Projects
-03.12.	10-14	Semester Projects
+## Schedule: Block 1 {.center}
 
 
+29.09.	10-13	The Big Picture
 
+30.9.	10-14	Git & Workflows
+
+## Schedule: Block 2 {.center}
+
+20.10.	10-13	R Programming Crash Course
+
+21.10.	10-14	Programming with Data
+
+## Schedule: Block 3 {.center}
+
+
+17.11.	10-13	Infrastructure
+
+18.11.	10-14	Infrastructure
+
+## Schedule: Block 4 {.center}
+
+01.12.	10-13	Semester Projects
+
+02.12.	10-14	Semester Projects
+
+
+# Course Resources
+
+
+## Read Online
+
+- [h4sci Slides](https://h4sci.github.io/h4sci-course)
+- [DevOps Carpentry free Online Book](https://h4sci.github.io/h4sci-book)
+- [Tasks & Exercises](https://github.com/h4sci/h4sci-tasks)
+
+## Source
+
+- [Slides: https://github.com/h4sci/h4sci-course](https://github.com/h4sci/h4sci-course)
+- [Book: https://github.com/devops-carpentry/book](https://github.com/devops-carpentry/book)
+
+## Community
+
+- [R Studio Server](https://teaching.kof.ethz.ch/auth-sign-in) (only available to enrolled ETH students during semester) 
+- [Slack Workspace](https://h4sci.slack.com/) (invite only) 
+- Zoom Live Sessions (only available to ETH students)
+
+
+# Course Objectives
+
+
+## 1. Evaluate the Role of Components in the Tech Stack {.center}
+
+
+## 2. Carpentry Level Version Control + Dev Workflows {.center}
+
+
+## 3. Applied Data Handling /w Programming Language {.center}
+
+
+## Example Benchmark: Create a Production Pipeline {.center}
+
+
+## Invidual Introduction {.center}
 
 
 
