--- a/block_2_session_2_programming_w_data.qmd
+++ b/block_2_session_2_programming_w_data.qmd
@@ -428,6 +428,10 @@ mtcars %>%
 - as a backend, e.g., survey (transactional database)
 - in research projects when you want to share data inside your lab
 - when you need to restrict access at different levels
+
+
+## Active Use c'd
+
 - to expose data through an API (to external collaborators or the public)
 - need to [integrate with different systems / tools and programming languages](https://github.com/mbannert/timeseriesdb/blob/ca3939a5686f0e68bc3d5cb828d0891795a4eac3/inst/sql/create_functions_collections.sql#L63)
 - specific operations, e.g., spatial data
@@ -539,7 +543,6 @@ con <-  dbConnect(drv = Postgres(),
 
 - Essentially the same interface (DBI)
 - server, files are abstracted away
-- (remote) url
 - host, password, port etc. needed for Postgres
 
 
