--- a/index.qmd
+++ b/index.qmd
@@ -20,6 +20,12 @@ footer: "Hacking for Science by Dr. Matthias Bannert is licensed under [CC BY-NC
 
 [Block 2, Session 2: Programming with Data](block_2_session_2_programming_w_data.html)
 
+[Block 3, Session 1: A Glimpse of Devops](block_3_session_1_terminology_n_context.html)
+
+[Block 3, Session 2: Infrastructure for Team Prokectse222](block_3_session_2_infra_for_team_projects.html)
+
+
+
 <!--
 
 
